unpackaged/main/default/objects/m_dicament__c/m_dicament__c.object-meta.xml
<CustomObject>
    <label>médicament</label>
    <nameField>
        <displayFormat>LM-{00000000}</displayFormat>
        <label>Nom de Liste de médicaments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>médicaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>