unpackaged/main/default/objects/m_dicament__c/fields/Cat_gories__c.field-meta.xml
<CustomField>
    <fullName>Cat_gories__c</fullName>
    <label>Catégories</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per os</fullName>
            </value>
            <value>
                <fullName>Parentéral</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>