unpackaged/main/default/objects/m_dicament__c/fields/Date_de_d_but__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>