unpackaged/main/default/objects/m_dicament__c/fields/Dimanche_check__c.field-meta.xml
<CustomField>
    <fullName>Dimanche_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Dimanche&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dim.</label>
    <type>Checkbox</type>
</CustomField>