unpackaged/main/default/objects/m_dicament__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipName>Listes_de_m_dicaments</relationshipName>
    <type>Lookup</type>
</CustomField>