unpackaged/main/default/objects/m_dicament__c/fields/Forme_gal_nique__c.field-meta.xml
<CustomField>
    <fullName>Forme_gal_nique__c</fullName>
    <label>Forme galénique</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprimé</fullName>
            </value>
            <value>
                <fullName>Comp. effervescent</fullName>
            </value>
            <value>
                <fullName>Poudre</fullName>
            </value>
            <value>
                <fullName>Collyre</fullName>
            </value>
            <value>
                <fullName>Gélule</fullName>
            </value>
            <value>
                <fullName>Goutte</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>S/C</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Sol. buvable</fullName>
            </value>
            <value>
                <fullName>Suppositoire</fullName>
            </value>
            <value>
                <fullName>Sachet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Crème</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>