unpackaged/main/default/objects/m_dicament__c/fields/G_r_par__c.field-meta.xml
<CustomField>
    <fullName>G_r_par__c</fullName>
    <label>Géré par</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Famille</fullName>
            </value>
            <value>
                <fullName>La Solution.ch</fullName>
            </value>
            <value>
                <fullName>Pharmacie</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>