unpackaged/main/default/objects/m_dicament__c/fields/Jeudi_check__c.field-meta.xml
<CustomField>
    <fullName>Jeudi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Jeudi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>jeu.</label>
    <type>Checkbox</type>
</CustomField>