unpackaged/main/default/objects/m_dicament__c/fields/Jours__c.field-meta.xml
<CustomField>
    <fullName>Jours__c</fullName>
    <label>Jours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lundi</fullName>
            </value>
            <value>
                <fullName>Mardi</fullName>
            </value>
            <value>
                <fullName>Mercredi</fullName>
            </value>
            <value>
                <fullName>Jeudi</fullName>
            </value>
            <value>
                <fullName>Vendredi</fullName>
            </value>
            <value>
                <fullName>Samedi</fullName>
            </value>
            <value>
                <fullName>Dimanche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>