unpackaged/main/default/objects/m_dicament__c/fields/Lundi_boolean__c.field-meta.xml
<CustomField>
    <fullName>Lundi_boolean__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Lundi&apos; ), &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lundi_boolean</label>
    <type>Text</type>
</CustomField>