unpackaged/main/default/objects/m_dicament__c/fields/Lundi_check__c.field-meta.xml
<CustomField>
    <fullName>Lundi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Lundi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lun.</label>
    <type>Checkbox</type>
</CustomField>