unpackaged/main/default/objects/m_dicament__c/fields/M_decin__c.field-meta.xml
<CustomField>
    <fullName>M_decin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Médecin</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>médicaments</relationshipLabel>
    <relationshipName>m_dicaments</relationshipName>
    <type>Lookup</type>
</CustomField>