unpackaged/main/default/objects/m_dicament__c/fields/M_dicament__c.field-meta.xml
<CustomField>
    <fullName>M_dicament__c</fullName>
    <label>Médicament</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>