unpackaged/main/default/objects/m_dicament__c/fields/Mardi_check__c.field-meta.xml
<CustomField>
    <fullName>Mardi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Mardi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mar.</label>
    <type>Checkbox</type>
</CustomField>