unpackaged/main/default/objects/m_dicament__c/fields/Matin__c.field-meta.xml
<CustomField>
    <fullName>Matin__c</fullName>
    <label>Matin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>