unpackaged/main/default/objects/m_dicament__c/fields/Mercredi_check__c.field-meta.xml
<CustomField>
    <fullName>Mercredi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Mercredi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mer.</label>
    <type>Checkbox</type>
</CustomField>