unpackaged/main/default/objects/m_dicament__c/fields/Midi__c.field-meta.xml
<CustomField>
    <fullName>Midi__c</fullName>
    <label>Midi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>