unpackaged/main/default/objects/m_dicament__c/fields/Nuit__c.field-meta.xml
<CustomField>
    <fullName>Nuit__c</fullName>
    <label>Nuit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>