unpackaged/main/default/objects/m_dicament__c/fields/Prise_hebdomadaire__c.field-meta.xml
<CustomField>
    <fullName>Prise_hebdomadaire__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Lundi&apos; ), &apos;Lundi&apos;, &apos;&apos;) &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Mardi&apos; ), &apos;Mardi&apos;, &apos;&apos;) &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Mercredi&apos; ), &apos;Mercredi&apos;, &apos;&apos;)  &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Jeudi&apos; ), &apos;Jeudi&apos;, &apos;&apos;)  &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Vendredi&apos; ), &apos;Vendredi&apos;, &apos;&apos;)  &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Samedi&apos; ), &apos;Samedi&apos;, &apos;&apos;)  &amp; &apos;  &apos; &amp;
IF( INCLUDES ( Jours__c , &apos;Dimanche&apos; ), &apos;Dimanche&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prise hebdomadaire</label>
    <type>Text</type>
</CustomField>