unpackaged/main/default/objects/m_dicament__c/fields/prise_journaliere__c.field-meta.xml
<CustomField>
    <fullName>prise_journaliere__c</fullName>
    <formula>IF( Matin__c == 0, &apos;&apos;, &apos;MATIN: &apos;&amp; TEXT(Matin__c) &amp;&apos; &apos;&amp; TEXT(Unit__c)  &amp; &apos; sous forme: &apos; &amp; TEXT(Forme_gal_nique__c )&amp; BR() )

&amp;IF( Midi__c == 0, &apos;&apos;, &apos;MIDI: &apos;&amp; TEXT(Midi__c) &amp;&apos; &apos;&amp; TEXT(Unit__c)  &amp; &apos; sous forme: &apos; &amp; TEXT(Forme_gal_nique__c )&amp; BR() )

&amp;IF( Soir__c == 0, &apos;&apos;, &apos;SOIR: &apos;&amp; TEXT(Soir__c) &amp;&apos; &apos;&amp; TEXT(Unit__c)  &amp; &apos; sous forme: &apos; &amp; TEXT(Forme_gal_nique__c )&amp; BR() )

&amp;IF( Nuit__c == 0, &apos;&apos;, &apos;NUIT: &apos;&amp; TEXT(Nuit__c) &amp;&apos; &apos;&amp; TEXT(Unit__c)  &amp; &apos; sous forme: &apos; &amp; TEXT(Forme_gal_nique__c )&amp; BR() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prise journalière</label>
    <type>Text</type>
</CustomField>