unpackaged/main/default/objects/m_dicament__c/fields/R_serve__c.field-meta.xml
<CustomField>
    <fullName>R_serve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réserve</label>
    <type>Checkbox</type>
</CustomField>