unpackaged/main/default/objects/m_dicament__c/fields/Samedi_check__c.field-meta.xml
<CustomField>
    <fullName>Samedi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Samedi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sam.</label>
    <type>Checkbox</type>
</CustomField>