unpackaged/main/default/objects/m_dicament__c/fields/Soir__c.field-meta.xml
<CustomField>
    <fullName>Soir__c</fullName>
    <label>Soir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>