unpackaged/main/default/objects/m_dicament__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <label>TEST</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>