unpackaged/main/default/objects/m_dicament__c/fields/Type_d_ordre__c.field-meta.xml
<CustomField>
    <fullName>Type_d_ordre__c</fullName>
    <label>Type d’ordre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oral / en attente d’ordonnance</fullName>
            </value>
            <value>
                <fullName>ordonnance reçue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>