unpackaged/main/default/objects/m_dicament__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mg</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>mcg</fullName>
            </value>
            <value>
                <fullName>gouttes</fullName>
            </value>
            <value>
                <fullName>UI</fullName>
            </value>
            <value>
                <fullName>push</fullName>
            </value>
            <value>
                <fullName>ampoule</fullName>
            </value>
            <value>
                <fullName>sachet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>