unpackaged/main/default/objects/m_dicament__c/fields/Vendredi_check__c.field-meta.xml
<CustomField>
    <fullName>Vendredi_check__c</fullName>
    <formula>IF( INCLUDES ( Jours__c , &apos;Vendredi&apos; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>vend.</label>
    <type>Checkbox</type>
</CustomField>